--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
-        "symfony/yaml": "6.2.*"
+        "symfony/yaml": "6.2.*",
+        "symfony/asset": "6.2.*",
+        "symfony/twig-pack": "*"
     },
     "require-dev": {
+        "symfony/profiler-pack": "*"
     },
     "config": {
         "allow-plugins": {
