--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,14 @@
         "symfony/twig-bundle": "6.2.*",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "symfony/form": "6.2.*",
+        "symfony/orm-pack": "*"
     },
     "require-dev": {
         "symfony/stopwatch": "6.2.*",
-        "symfony/web-profiler-bundle": "6.2.*"
+        "symfony/web-profiler-bundle": "6.2.*",
+        "symfony/maker-bundle": "*"
     },
     "config": {
         "allow-plugins": {
